tests/baselines/reference/scannerNumericLiteral8.errors.txt
scannerNumericLiteral8.ts(1,1): error TS1121: Octal literals are not allowed. Use the syntax '-0o3'.


==== scannerNumericLiteral8.ts (1 errors) ====
    -03
    ~~~
!!! error TS1121: Octal literals are not allowed. Use the syntax '-0o3'.